<resources>
    <string name="app_name">WeatherApp</string>
    <string name="label_done">Done</string>
    <string name="label_error">Error</string>

    <string name="msg_something_went_wrong">Something went wrong. Please try again later.</string>
    <string name="msg_failed_to_get_user_location">Unable to get user location weather.</string>
    <string name="msg_city_field_required">city field is required.</string>
    <string name="msg_empty_search_city">Search bar is blank, please make sure to insert the city name.</string>
    <string name="msg_search_city_length_validation">Search bar text is too short.</string>
    <string name="msg_invalidate_query_search">Nothing to geocode.</string>
    <string name="msg_no_city_found">City Not Found.</string>
    <string name="msg_invalidate_api_key">Invalid API key. Please use a new one.</string>

    <string name="label_city_input">City (cairo, london,…)</string>


    <string name="label_retry">retry</string>
    <string name="label_search">Search</string>

    <string name="label_city">City name</string>
    <string name="label_lat">City geo location, longitude</string>
    <string name="label_lon">City geo location, latitude</string>
    <string name="label_weather">weather</string>
    <string name="label_weather_description">weather description</string>
    <string name="label_temperature">Temperature</string>
    <string name="label_maximum_temperature">Maximum temperature at the moment. This is maximal currently observed temperature (within large megalopolises and urban areas).</string>
    <string name="label_minimum_temperature">Minimum temperature at the moment. This is minimal currently observed temperature (within large megalopolises and urban areas).</string>
    <string name="label_atmospheric_pressure">Atmospheric pressure</string>
    <string name="label_humidity_percentage">Humidity</string>
    <string name="label_visibility">Visibility, meter. The maximum value of the visibility is 10km</string>
    <string name="label_wind_speed">Wind speed. Unit Default: meter/sec, Metric: meter/sec, Imperial: miles/hour.</string>
    <string name="label_wind_direction">Wind direction, degrees (meteorological)</string>
    <string name="label_clouds_percentage">Cloudiness</string>
    <string name="label_sunrise_time">Sunrise time</string>
    <string name="label_sunset_time">Sunset time</string>

    <string name="msg_failed_to_load_user_weather">Failed to get user location weather!\n tap to retry</string>
</resources>